[tool.poetry]
name = "bacs"
version = "0.1.0"
description = "Bundle Adjustment For Camera Systems"
authors = ["Zauberzeug GmbH <info@zauberzeug.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zauberzeug/bacs"
keywords = ["bundle", "adjustment", "cameras", "points", "infinity"]

[tool.poetry.dependencies]
python = "^3.8 <3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
