[tool.poetry]
name = "bacs"
version = "0.1.0"
description = "Bundle Adjustment For Camera Systems"
authors = ["Zauberzeug GmbH <info@zauberzeug.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zauberzeug/bacs"
keywords = ["bundle", "adjustment", "cameras", "points", "infinity"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = "^1.21.2"
scipy = [
    { version = ">=1.10.0,<1.11.0", python = "3.8" },
    { version = ">=1.11.0", python = ">=3.9" }
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true